update from draft to publish

--- a/src/content/blog/dragons-a-field-guide-start/index.mdx
+++ b/src/content/blog/dragons-a-field-guide-start/index.mdx
@@ -11,7 +11,7 @@ tags:
 heroImage:
   { src: './img/pexels-pavel-georgiev-941244-12650746.jpg', alt: 'photo of a dragon statue' }
 # thumbnail.jpg should be in the same folder as the article
-draft: true # (set true will only show in development)
+draft: false # (set true will only show in development)
 language: 'English' # (String as you like)
 comment: true # (set false will disable comment, even if you've enabled it in site-config)
 ---
